--- a/tips.org
+++ b/tips.org
@@ -5,8 +5,6 @@ Tips à appliquer pour =diractions=
 
 Antigen, globalement trop bien foutu!!! :)
 
-
-
 * Zsh découvertes
 - appel de commande avec chaine de caractère et substitution de variable
 - functions pour tester si variable est la bonne
@@ -18,6 +16,7 @@ Antigen, globalement trop bien foutu!!! :)
 - extrait les argument tout au début avec des local
 - chainage de commande pour filtrer
 - définition de fonction de setup (et éventuel appel à la fin)
+- opération sr les chaines avec simples évaluation de var: =${op}= =$()= ou sed operation
 
 ** Maybe
 - documentation en dessous fonction
@@ -26,7 +25,6 @@ Antigen, globalement trop bien foutu!!! :)
 ** à creuser
 #+BEGIN_SRC sh
  if (( $+functions[pmodload] )); then
-
   {
       # pipe block
   } >
@@ -128,4 +126,38 @@ Factorisation
   # ....
       unfunction -- --add-var
 
+#+END_SRC
+
+
+** Parsing
+
+analyser super foncion =-antigen-parse-args=
+*** Accumulation de commandes
+#+BEGIN_SRC sh
+   --add-var () {
+       test -z "$code" || code="$code\n"
+       code="${code}local $1='$2'"
+  }
+#+END_SRC
+
+
+*** Get the argument name and value.
+#+BEGIN_SRC sh
+  if [[ $arg != *=* ]]; then
+      local name="$arg"
+      local value=''
+  else
+      local name="${arg%\=*}"
+      local value="${arg#*=}"
+  fi
+
+#+END_SRC
+
+*** valeur par default
+#+BEGIN_SRC sh
+  -set-default () {
+      local arg_name="$1"
+      local arg_value="$2"
+      eval "test -z \"\$$arg_name\" && export $arg_name='$arg_value'"
+  }
 #+END_SRC
